--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/moment": "^1.1.0",
     "@material-ui/core": "^3.9.3",
     "lodash": "^4.17.11",
+    "material-ui-pickers": "^2.2.4",
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
